feat: milestone 5 first task done

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     <title>Boolzapp</title>
 
+    <!-- Luxon -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/3.4.4/luxon.min.js"></script>
+
     <!-- Vue -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
