fix: fixed removeMessage again

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                             <button>Info Messaggio</button>
                           </li>
                           <li>
-                            <button @click="removeMessage(curMessage,index)">Cancella Messaggio</button>
+                            <button @click="removeMessage(index)">Cancella Messaggio</button>
                           </li>
                         </ul>
                       </span>
