--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
             <div class="flex chat-info just-cont-center col-dir">
               <span>{{contacts[activeChatIndex].name}}</span>
-              <span class="last-access">Ultimo accesso oggi alle 16:26</span>
+              <span class="last-access">{{ contacts[activeChatIndex].contact_status }}</span>
             </div>
             <div class="icons just-cont-center align-center">
               <ul class="flex just-cont-center align-center">
