feat: added plane icon

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <div class="audio just-cont-center align-center">
               <button @click="sendMessage">
                 <i v-if="!isWriting" class="fa-solid fa-microphone"></i>
-                <span v-else>Invia</span>
+                <span v-else><i class="fa-solid fa-plane"></i></span>
               </button>
             </div>
           </div>
