feat: removed chevron from received messages

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <div class="flex message">
                   <div class="text">{{curMessage.message}}</div>
                   <div class="flex select align-center just-cont-sbtw">
-                    <i class="fa-solid fa-chevron-down"></i>
+                    <span>&zwnj;</span>
                     <span class="hour">{{curMessage.date}}</span>
                   </div>
                 </div>
